# TidalDub

./: .gitignore  ARCHITECTURE.md  README.md  RUNNING.md  SETUP.md  config.yaml  pyproject.toml  requirements.txt  setup.py  uv.toml
state/: tidaldub.db
tidaldub/: __init__.py  async_worker.py  cli.py  muxer.py  orchestrator.py  recovery.py
tidaldub/queues/: __init__.py  manager.py
tidaldub/state/: __init__.py  database.py  events.py  fsm.py
tidaldub/workers/: __init__.py  base.py
workers/diarization/: pyproject.toml  requirements.txt  worker.py
workers/mixing/: pyproject.toml  requirements.txt  worker.py
workers/separation/: pyproject.toml  requirements.txt  worker.py
workers/transcription/: pyproject.toml  requirements.txt  worker.py
workers/translation/: pyproject.toml  requirements.txt  worker.py
workers/tts/: pyproject.toml  requirements.txt  worker.py
