[project]
name = "tidaldub-diarization"
version = "0.1.0"
description = "Speaker diarization worker using pyannote-audio"
requires-python = ">=3.12,<3.15"

dependencies = [
    # PyTorch ecosystem
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    
    # Speaker diarization
    "pyannote-audio>=3.3.2",
    
    # Speaker embeddings
    "speechbrain>=1.0.2",
    
    # Numerical
    "numpy>=2.2.2",
    "scipy>=1.15.1",
    
    # Progress
    "tqdm>=4.64.0",
    
    # Config
    "pyyaml>=6.0.2",
    
    # HuggingFace for model download
    "huggingface-hub>=0.27.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
# RTX 5070 8GB VRAM: pyannote uses ~2-3GB VRAM
# Requires HuggingFace token for gated models:
# export HUGGINGFACE_TOKEN=your_token

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
